StepReturn isNewStateFail andra miljör